--- a/config.yaml
+++ b/config.yaml
@@ -52,7 +52,7 @@ params:
         url: https://www.instagram.com
       - icon: fa-github
         label: GitHub
-        url: https://www.github.com/wrodriguezoma
+        url: https://www.github.com/rodriguezoma
       - icon: fa-linkedin
         label: LinkedIn
         url: https://www.linkedin.com
