--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: http://zoma-website.netlify.app/
 languageCode: en-us
 title: ZOMA W Rodrigue
 theme: forty
@@ -57,10 +57,10 @@ params:
         label: LinkedIn
         url: https://www.linkedin.com
   image: ''
-  name: Your name
+  name: ZOMA W Rodrigue
   navigation:
     button1:
-      - name: Get Started
+      - name: Start
         url: blogs
     button2:
       - name: Log In
@@ -84,7 +84,7 @@ params:
         subtitle: Ipsum Dolor Sit Amet
         title: Aliquam
         url: blogs/aliquam
-      - image: pic02.jpg
+      - image: imag1.JPG
         subtitle: Feugiat Amet Tempus
         title: Tempus
         url: blogs/tempus
@@ -105,7 +105,7 @@ params:
         title: Etiam
         url: blogs/ipsum
   two:
-    buttonText: Get Started
+    buttonText: Start
     enable: yes
     subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
       \r\n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \r\n    Pellentesque
