--- a/config.yaml
+++ b/config.yaml
@@ -43,19 +43,19 @@ params:
     social:
       - icon: fa-twitter
         label: Twitter
-        url: https://www.twitter.com
+        url: https://www.twitter.com/@rodrigue_zoma
       - icon: fa-facebook
         label: Facebook
-        url: https://www.facebook.com
+        url: https://www.facebook.com/wendyamrodriguezoma
       - icon: fa-instagram
         label: Instagram
-        url: https://www.instagram.com
+        url: https://www.instagram.com/rodrigo_zoma
       - icon: fa-github
         label: GitHub
         url: https://www.github.com/rodriguezoma
       - icon: fa-linkedin
         label: LinkedIn
-        url: https://www.linkedin.com
+        url: https://www.linkedin.com/feed/?trk=404_page
   image: ''
   name: ZOMA W Rodrigue
   navigation:
