--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://rodriguezoma-website.netlify.app/
+baseURL: http://rodrigue-website.netlify.app/
 languageCode: en-us
 title: ZOMA W Rodrigue
 theme: forty
