change in config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -106,7 +106,7 @@ params:
         title: Etiam
         url: blogs/ipsum
   two:
-    buttonText: ok
+    buttonText: Start
     enable: yes
     subtitle: "My name is Wendyam Rodrigue ZOMA, I was born on February 24, 1996 and I am originally from the Central West region, particularly in Koudougou. I am currently in a year of license in an institute of technology, I like my studies, it is quite diversified, dynamic, clearly I like what I do, yet there is a field that I like very much which networking!
 
