change in config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -77,7 +77,7 @@ params:
         url: elements.html
     menu: Menu
     subtitle: By HTML5 Up
-    title: Forty
+    title: ZOMA
   tiles:
     enable: yes
     showcase:
