change in README.md

--- a/config.yaml
+++ b/config.yaml
@@ -81,7 +81,7 @@ params:
   tiles:
     enable: yes
     showcase:
-      - image: imag1.JPG
+      - image: imag13.jpg
         subtitle: Educate a new generation
         title: BIT
         url: blogs/aliquam
@@ -101,7 +101,7 @@ params:
         subtitle: splay is better for us
         title: Sport
         url: blogs/ipsum
-      - image: imag9.JPG
+      - image: imag1.JPG
         subtitle: study
         title: School
         url: blogs/ipsum
